feat : setExposedHeaders 변경